// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useitem importing a class 1`] = `
Program {
  "children": [
    UseGroup {
      "items": [
        UseItem {
          "alias": null,
          "kind": "useitem",
          "name": "some\\my_namespace\\ClassC",
          "type": null,
        },
      ],
      "kind": "usegroup",
      "name": null,
      "type": null,
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`useitem importing a class with type 1`] = `
Program {
  "children": [
    UseGroup {
      "items": [
        UseItem {
          "alias": Identifier {
            "kind": "identifier",
            "name": "C",
          },
          "kind": "useitem",
          "name": "some\\my_namespace\\ClassC",
          "type": null,
        },
      ],
      "kind": "usegroup",
      "name": null,
      "type": null,
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`useitem importing a constant 1`] = `
Program {
  "children": [
    UseGroup {
      "items": [
        UseItem {
          "alias": null,
          "kind": "useitem",
          "name": "My\\Full\\CONSTANT",
          "type": null,
        },
      ],
      "kind": "usegroup",
      "name": null,
      "type": "const",
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`useitem importing a constant with type 1`] = `
Program {
  "children": [
    UseGroup {
      "items": [
        UseItem {
          "alias": Identifier {
            "kind": "identifier",
            "name": "MY_CONST",
          },
          "kind": "useitem",
          "name": "My\\Full\\CONSTANT",
          "type": null,
        },
      ],
      "kind": "usegroup",
      "name": null,
      "type": "const",
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`useitem importing a function 1`] = `
Program {
  "children": [
    UseGroup {
      "items": [
        UseItem {
          "alias": null,
          "kind": "useitem",
          "name": "My\\Full\\functionName",
          "type": null,
        },
      ],
      "kind": "usegroup",
      "name": null,
      "type": "function",
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`useitem importing a function with type 1`] = `
Program {
  "children": [
    UseGroup {
      "items": [
        UseItem {
          "alias": Identifier {
            "kind": "identifier",
            "name": "func",
          },
          "kind": "useitem",
          "name": "My\\Full\\functionName",
          "type": null,
        },
      ],
      "kind": "usegroup",
      "name": null,
      "type": "function",
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`useitem invalid use 1`] = `
Program {
  "children": [
    UseGroup {
      "items": [
        UseItem {
          "alias": null,
          "kind": "useitem",
          "name": "",
          "type": null,
        },
      ],
      "kind": "usegroup",
      "name": null,
      "type": "function",
    },
    ExpressionStatement {
      "expression": Variable {
        "curly": false,
        "kind": "variable",
        "name": "foo",
      },
      "kind": "expressionstatement",
    },
    UseGroup {
      "items": [
        UseItem {
          "alias": null,
          "kind": "useitem",
          "name": "FOO",
          "type": null,
        },
        UseItem {
          "alias": null,
          "kind": "useitem",
          "name": "BAR",
          "type": null,
        },
      ],
      "kind": "usegroup",
      "name": "",
      "type": "const",
    },
    UseGroup {
      "items": [
        UseItem {
          "alias": null,
          "kind": "useitem",
          "name": "foo",
          "type": null,
        },
      ],
      "kind": "usegroup",
      "name": "some",
      "type": null,
    },
    ExpressionStatement {
      "expression": Variable {
        "curly": false,
        "kind": "variable",
        "name": "error",
      },
      "kind": "expressionstatement",
    },
    ExpressionStatement {
      "expression": undefined,
      "kind": "expressionstatement",
    },
    _Function {
      "arguments": [
        Parameter {
          "attrGroups": [],
          "byref": false,
          "flags": 0,
          "kind": "parameter",
          "name": null,
          "nullable": false,
          "readonly": false,
          "type": null,
          "value": null,
          "variadic": false,
        },
        Parameter {
          "attrGroups": [],
          "byref": false,
          "flags": 0,
          "kind": "parameter",
          "name": null,
          "nullable": false,
          "readonly": false,
          "type": null,
          "value": null,
          "variadic": false,
        },
      ],
      "attrGroups": [],
      "body": null,
      "byref": false,
      "kind": "function",
      "name": Identifier {
        "kind": "identifier",
        "name": false,
      },
      "nullable": false,
      "type": null,
    },
    ExpressionStatement {
      "expression": undefined,
      "kind": "expressionstatement",
    },
  ],
  "errors": [
    Error {
      "expected": 105,
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected '$foo' (T_VARIABLE), expecting T_STRING on line 1",
      "token": "'$foo' (T_VARIABLE)",
    },
    Error {
      "expected": ";",
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected '$foo' (T_VARIABLE), expecting ';' on line 1",
      "token": "'$foo' (T_VARIABLE)",
    },
    Error {
      "expected": "}",
      "kind": "error",
      "line": 8,
      "message": "Parse Error : syntax error, unexpected '$error' (T_VARIABLE), expecting '}' on line 8",
      "token": "'$error' (T_VARIABLE)",
    },
    Error {
      "expected": ";",
      "kind": "error",
      "line": 8,
      "message": "Parse Error : syntax error, unexpected '$error' (T_VARIABLE), expecting ';' on line 8",
      "token": "'$error' (T_VARIABLE)",
    },
    Error {
      "expected": ";",
      "kind": "error",
      "line": 8,
      "message": "Parse Error : syntax error, unexpected ',', expecting ';' on line 8",
      "token": "','",
    },
    Error {
      "expected": "EXPR",
      "kind": "error",
      "line": 8,
      "message": "Parse Error : syntax error, unexpected ',' on line 8",
      "token": "','",
    },
    Error {
      "expected": ";",
      "kind": "error",
      "line": 9,
      "message": "Parse Error : syntax error, unexpected 'function' (T_FUNCTION), expecting ';' on line 9",
      "token": "'function' (T_FUNCTION)",
    },
    Error {
      "expected": "(",
      "kind": "error",
      "line": 9,
      "message": "Parse Error : syntax error, unexpected '$bar' (T_VARIABLE), expecting '(' on line 9",
      "token": "'$bar' (T_VARIABLE)",
    },
    Error {
      "expected": "(",
      "kind": "error",
      "line": 9,
      "message": "Parse Error : syntax error, unexpected ',', expecting '(' on line 9",
      "token": "','",
    },
    Error {
      "expected": 222,
      "kind": "error",
      "line": 9,
      "message": "Parse Error : syntax error, unexpected ',', expecting T_VARIABLE on line 9",
      "token": "','",
    },
    Error {
      "expected": 222,
      "kind": "error",
      "line": 10,
      "message": "Parse Error : syntax error, unexpected '}', expecting T_VARIABLE on line 10",
      "token": "'}'",
    },
    Error {
      "expected": [
        ",",
        ")",
      ],
      "kind": "error",
      "line": 10,
      "message": "Parse Error : syntax error, unexpected '}' on line 10",
      "token": "'}'",
    },
    Error {
      "expected": ")",
      "kind": "error",
      "line": 10,
      "message": "Parse Error : syntax error, unexpected '}', expecting ')' on line 10",
      "token": "'}'",
    },
    Error {
      "expected": "{",
      "kind": "error",
      "line": 10,
      "message": "Parse Error : syntax error, unexpected '}', expecting '{' on line 10",
      "token": "'}'",
    },
    Error {
      "expected": "EXPR",
      "kind": "error",
      "line": 10,
      "message": "Parse Error : syntax error, unexpected '}' on line 10",
      "token": "'}'",
    },
  ],
  "kind": "program",
}
`;

exports[`useitem simple 1`] = `
Program {
  "children": [
    UseGroup {
      "items": [
        UseItem {
          "alias": null,
          "kind": "useitem",
          "name": "My\\Full\\NSname",
          "type": null,
        },
      ],
      "kind": "usegroup",
      "name": null,
      "type": null,
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`useitem simple 2 1`] = `
Program {
  "children": [
    UseGroup {
      "items": [
        UseItem {
          "alias": null,
          "kind": "useitem",
          "name": "ArrayObject",
          "type": null,
        },
      ],
      "kind": "usegroup",
      "name": null,
      "type": null,
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`useitem with type 1`] = `
Program {
  "children": [
    UseGroup {
      "items": [
        UseItem {
          "alias": Identifier {
            "kind": "identifier",
            "name": "Another",
          },
          "kind": "useitem",
          "name": "My\\Full\\Classname",
          "type": null,
        },
      ],
      "kind": "usegroup",
      "name": null,
      "type": null,
    },
  ],
  "errors": [],
  "kind": "program",
}
`;
